--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "passport-jwt": "^4.0.1"
   },
   "devDependencies": {
+    "@types/ejs": "^3.1.5",
     "@types/express": "^4.17.21",
     "@types/node": "^20.10.0",
     "@types/nodemailer": "^6.4.14",
