--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
     "compilerOptions": {
       "target": "es2016",   
       "module": "commonjs",                                
-      "rootDir": "./src",                                  
+      "rootDir": ".",                                  
       "allowJs": true,                                     
       "outDir": "./dist",                                  
       "esModuleInterop": true,                             
@@ -10,7 +10,7 @@
       "strict": true,                                      
       "noImplicitAny": true,                            
     },
-    "include": ["src/**/*.ts"],
+    "include": ["src/**/*.ts", "tests/**/*.ts"],
     "exclude": ["node_modules"]
   }
   
